# hwo-bot-team-55

./: .gitignore  README.md  build.sh  hwohaskellbot.cabal  project.config  start.sh  stop.sh
logdata/kerailyerat/: match_log.txt
logdata/kerailyerat/matches/: duel-1003-hwo-bot-team-114-hwo-bot-team-55.txt  duel-1013-hwo-bot-team-55-hwo-bot-team-96.txt  duel-1025-hwo-bot-team-11-hwo-bot-team-55.txt  duel-1034-hwo-bot-team-186-hwo-bot-team-55.txt  duel-1054-hwo-bot-team-55-hwo-bot-team-95.txt  duel-1065-hwo-bot-team-55-hwo-bot-team-175.txt  duel-1086-hwo-bot-team-177-hwo-bot-team-55.txt  duel-109-hwo-bot-team-186-hwo-bot-team-55.txt  duel-1106-hwo-bot-team-55-hwo-bot-team-95.txt  duel-1116-hwo-bot-team-164-hwo-bot-team-55.txt  duel-1122-hwo-bot-team-55-hwo-bot-team-43.txt  duel-1130-hwo-bot-team-24-hwo-bot-team-55.txt  duel-1143-hwo-bot-team-110-hwo-bot-team-55.txt  duel-1156-hwo-bot-team-55-hwo-bot-team-76.txt  duel-1169-hwo-bot-team-55-hwo-bot-team-93.txt  duel-118-hwo-bot-team-199-hwo-bot-team-55.txt  duel-1185-hwo-bot-team-114-hwo-bot-team-55.txt  duel-1191-hwo-bot-team-11-hwo-bot-team-55.txt  duel-1200-hwo-bot-team-55-hwo-bot-team-4.txt  duel-1220-hwo-bot-team-55-hwo-bot-team-99.txt  duel-1246-hwo-bot-team-186-hwo-bot-team-55.txt  duel-1257-hwo-bot-team-164-hwo-bot-team-55.txt  duel-1264-hwo-bot-team-23-hwo-bot-team-55.txt  duel-1268-hwo-bot-team-55-hwo-bot-team-41.txt  duel-127-hwo-bot-team-197-hwo-bot-team-55.txt  duel-1283-hwo-bot-team-154-hwo-bot-team-55.txt  (+214 more)
src/: Domain.hs  GameLogic.hs  Json.hs  Main.hs  Position.hs  UnitTests.hs
